added media queries commit

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h4>Provided examples</h4>
    
     <h3 style="margin-bottom: 0px;">Row 1</h3>
-    <div class="flexbox1">
+    <div class="flexbox-row1">
         <div style="background-color: red; width: 50%; color: red;">1</div>
         <div style="background-color: blue; width: 50%; color: blue;">2</div>
     </div>
    
     <h3 style="margin-bottom: 0px;">Row 2</h3>
-    <div class="grid1">
+    <div class="grid-row2">
         <div style="background-color: green; color: green;">1</div>
         <div style="background-color: blue; color: blue;">2</div>
     </div>
@@ -31,7 +31,7 @@
     </div>
    
     <h3 style="margin-bottom: 0px;">Row 4</h3>
-    <div class="grid1">
+    <div class="grid-row2">
         <div style="background-color: red; color: red;">1</div>
         <div style="background-color: blue; color: blue;">2</div>
     </div>
